// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks if home page group sorting works 1`] = `
<DocumentFragment>
  <div
    class="pl-6 pr-8"
  >
    <div
      class="flex inline-block mb-4 mt-4 pl-5"
    >
      <p
        class="pr-8 text-2xl"
      >
        Moje grupy
      </p>
      <a
        class=""
        href="/create/group"
      >
        <button
          class="text-black text-base underline items-center pt-2"
          type="button"
        >
          Stwórz grupę +
        </button>
      </a>
      <div
        class="absolute inline-block text-left right-0 mr-16"
      >
        <div
          class="flex inline"
        >
          <span
            class="mr-2"
          >
            Wyświetlane grupy: 
          </span>
          <button
            class="flex inline underline"
          >
            Wszystkie grupy
            <svg
              class=" ml-1 h-full w-[9px] items-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="relative flex flex-wrap gap-x-5 gap-y-2 bg-light_gray px-8 py-6 bg-lilly-bg rounded-md"
    >
      <div
        class="relative w-64 bg-[#59007f]  min-h-fit h-40 overflow-hidden rounded-md"
      >
        <a
          class="w-full"
          href="/group/0"
        >
          <h1
            class="flex items-center justify-center text-center pb-2 h-[50%] pt-3 text-white font-semibold text-lg"
          >
            Example Group 1
          </h1>
           
        </a>
        <p
          class="px-2 pl-2 flex items-center text-base h-[50%] text-ellipsis bg-white bottom-0 text-black"
        >
          Example desc
        </p>
      </div>
      <div
        class="relative w-64 bg-[#006400]  min-h-fit h-40 overflow-hidden rounded-md"
      >
        <a
          class="w-full"
          href="/group/2"
        >
          <h1
            class="flex items-center justify-center text-center pb-2 h-[50%] pt-3 text-white font-semibold text-lg"
          >
            Example Group 2
          </h1>
           
        </a>
        <p
          class="px-2 pl-2 flex items-center text-base h-[50%] text-ellipsis bg-white bottom-0 text-black"
        >
          Example desc 2
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checks if home page group sorting works 2`] = `
<DocumentFragment>
  <div
    class="pl-6 pr-8"
  >
    <div
      class="flex inline-block mb-4 mt-4 pl-5"
    >
      <p
        class="pr-8 text-2xl"
      >
        Moje grupy
      </p>
      <a
        class=""
        href="/create/group"
      >
        <button
          class="text-black text-base underline items-center pt-2"
          type="button"
        >
          Stwórz grupę +
        </button>
      </a>
      <div
        class="absolute inline-block text-left right-0 mr-16"
      >
        <div
          class="flex inline"
        >
          <span
            class="mr-2"
          >
            Wyświetlane grupy: 
          </span>
          <button
            class="flex inline underline"
          >
            Wszystkie grupy
            <svg
              class=" ml-1 h-full w-[9px] items-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </button>
        </div>
        <div
          class=" absolute left-20 z-10 w-56 mt-4 origin-top-right bg-white border border-hover_gray rounded-md shadow-lg"
        >
          <div
            class="block px-4 py-2 text-sm text-black rounded-lg hover:bg-lilly-bg hover:text-black"
          >
            Grupy uczniowskie użytkownika
          </div>
          <div
            class="block px-4 py-2 text-sm text-black rounded-lg hover:bg-lilly-bg hover:text-black"
          >
             Grupy nauczycielskie użytkownika
          </div>
          <div
            class="block px-4 py-2 text-sm text-black rounded-lg hover:bg-lilly-bg hover:text-black"
          >
            Wszystkie grupy użytkownika
          </div>
        </div>
      </div>
    </div>
    <div
      class="relative flex flex-wrap gap-x-5 gap-y-2 bg-light_gray px-8 py-6 bg-lilly-bg rounded-md"
    >
      <div
        class="relative w-64 bg-[#59007f]  min-h-fit h-40 overflow-hidden rounded-md"
      >
        <a
          class="w-full"
          href="/group/0"
        >
          <h1
            class="flex items-center justify-center text-center pb-2 h-[50%] pt-3 text-white font-semibold text-lg"
          >
            Example Group 1
          </h1>
           
        </a>
        <p
          class="px-2 pl-2 flex items-center text-base h-[50%] text-ellipsis bg-white bottom-0 text-black"
        >
          Example desc
        </p>
      </div>
      <div
        class="relative w-64 bg-[#006400]  min-h-fit h-40 overflow-hidden rounded-md"
      >
        <a
          class="w-full"
          href="/group/2"
        >
          <h1
            class="flex items-center justify-center text-center pb-2 h-[50%] pt-3 text-white font-semibold text-lg"
          >
            Example Group 2
          </h1>
           
        </a>
        <p
          class="px-2 pl-2 flex items-center text-base h-[50%] text-ellipsis bg-white bottom-0 text-black"
        >
          Example desc 2
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checks if home page group sorting works 3`] = `
<DocumentFragment>
  <div
    class="pl-6 pr-8"
  >
    <div
      class="flex inline-block mb-4 mt-4 pl-5"
    >
      <p
        class="pr-8 text-2xl"
      >
        Moje grupy
      </p>
      <a
        class=""
        href="/create/group"
      >
        <button
          class="text-black text-base underline items-center pt-2"
          type="button"
        >
          Stwórz grupę +
        </button>
      </a>
      <div
        class="absolute inline-block text-left right-0 mr-16"
      >
        <div
          class="flex inline"
        >
          <span
            class="mr-2"
          >
            Wyświetlane grupy: 
          </span>
          <button
            class="flex inline underline"
          >
            Grupy uczniowskie
            <svg
              class=" ml-1 h-full w-[9px] items-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </button>
        </div>
        <div
          class=" absolute left-20 z-10 w-56 mt-4 origin-top-right bg-white border border-hover_gray rounded-md shadow-lg"
        >
          <div
            class="block px-4 py-2 text-sm text-black rounded-lg hover:bg-lilly-bg hover:text-black"
          >
            Grupy uczniowskie użytkownika
          </div>
          <div
            class="block px-4 py-2 text-sm text-black rounded-lg hover:bg-lilly-bg hover:text-black"
          >
             Grupy nauczycielskie użytkownika
          </div>
          <div
            class="block px-4 py-2 text-sm text-black rounded-lg hover:bg-lilly-bg hover:text-black"
          >
            Wszystkie grupy użytkownika
          </div>
        </div>
      </div>
    </div>
    <div
      class="relative flex flex-wrap gap-x-5 gap-y-2 bg-light_gray px-8 py-6 bg-lilly-bg rounded-md"
    />
  </div>
</DocumentFragment>
`;

exports[`checks if home page renders correctly with sample groups 1`] = `
<DocumentFragment>
  <div
    class="pl-6 pr-8"
  >
    <div
      class="flex inline-block mb-4 mt-4 pl-5"
    >
      <p
        class="pr-8 text-2xl"
      >
        Moje grupy
      </p>
      <a
        class=""
        href="/create/group"
      >
        <button
          class="text-black text-base underline items-center pt-2"
          type="button"
        >
          Stwórz grupę +
        </button>
      </a>
      <div
        class="absolute inline-block text-left right-0 mr-16"
      >
        <div
          class="flex inline"
        >
          <span
            class="mr-2"
          >
            Wyświetlane grupy: 
          </span>
          <button
            class="flex inline underline"
          >
            Wszystkie grupy
            <svg
              class=" ml-1 h-full w-[9px] items-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="relative flex flex-wrap gap-x-5 gap-y-2 bg-light_gray px-8 py-6 bg-lilly-bg rounded-md"
    >
      <div
        class="relative w-64 bg-[#59007f]  min-h-fit h-40 overflow-hidden rounded-md"
      >
        <a
          class="w-full"
          href="/group/0"
        >
          <h1
            class="flex items-center justify-center text-center pb-2 h-[50%] pt-3 text-white font-semibold text-lg"
          >
            Example Group 1
          </h1>
           
        </a>
        <p
          class="px-2 pl-2 flex items-center text-base h-[50%] text-ellipsis bg-white bottom-0 text-black"
        >
          Example desc
        </p>
      </div>
      <div
        class="relative w-64 bg-[#006400]  min-h-fit h-40 overflow-hidden rounded-md"
      >
        <a
          class="w-full"
          href="/group/2"
        >
          <h1
            class="flex items-center justify-center text-center pb-2 h-[50%] pt-3 text-white font-semibold text-lg"
          >
            Example Group 2
          </h1>
           
        </a>
        <p
          class="px-2 pl-2 flex items-center text-base h-[50%] text-ellipsis bg-white bottom-0 text-black"
        >
          Example desc 2
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
